--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -1,5 +1,6 @@
 @import 'https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/css/bootstrap-reboot.min.css';
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
+@import './media.scss';
 * {
     margin: 0;
     padding: 0;
